-
Bug
-
Resolution: Done
-
P4: Low
-
5.15.3
-
-
8886462872db9cdab4d7683823fd24fb9f8920c4 (qt/qtbase/dev) 29dea7f3173783a97f85d84623241d8dc388c701 (qt/qtbase/6.1) 60bdf6a5c63572caff371dc3c285679bdbca472a (qt/tqtc-qtbase/5.15)
In the sample of <QtInstallation>\Examples\Qt-5.15.3\widgets\mainwindows\mdi\
Added mdiArea->setOption(QMdiArea::DontMaximizeSubWindowOnActivation); in MainWindow::MainWindow() function.
To reproduce:
Create 1st sub window, maximize it, create 2rd sub window, maximize it, the title of 1st sub window will remain in the main window title bar no matter what operation being done from here
| For Gerrit Dashboard: QTBUG-92240 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 347426,6 | QMdiArea: Fix top level window title when using DontMaximizeSubWindowOnActivation | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 347948,2 | QMdiArea: Fix top level window title when using DontMaximizeSubWindowOnActivation | 6.1 | qt/qtbase | Status: MERGED | +2 | 0 |
| 347951,2 | QMdiArea: Fix top level window title when using DontMaximizeSubWindowOnActivation | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |