QMdiArea: Fix top level window title when using DontMaximizeSubWindowOnActivation

When trying to find the original window title, check for another
maximized sub window and use its title. Protect the calls to
setWindowTitle to prevent the original title from being cleared.

Fixes: QTBUG-92240
Change-Id: I55175382ab261b4cf8b5528304adaaec4fbe2c31
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 8886462872db9cdab4d7683823fd24fb9f8920c4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>